<resources>
    <string name="app_name">MyFeelings</string>
    <string name="todo">TODO</string>
    <string name="question">¿Cómo te sientes el día de hoy?</string>
    <string name="guardar">Guardar</string>
    <string name="muyFeliz">Muy feliz</string>
    <string name="feliz">Feliz</string>
    <string name="neutral">Neutral</string>
    <string name="triste">Triste</string>
    <string name="muyTriste">Muy triste</string>
</resources>
