<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <ScrollView
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/graph"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                >

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/todo"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:text="@string/question"
                />

            <LinearLayout
                android:id="@+id/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                >

                <ImageButton
                    android:id="@+id/verySadButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_verysad"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    />

                <ImageButton
                    android:id="@+id/sadButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_sad"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    />

                <ImageButton
                    android:id="@+id/neutralButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_neutral"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    />

                <ImageButton
                    android:id="@+id/happyButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_happy"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    />

                <ImageButton
                    android:id="@+id/veryHappyButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_veryhappy"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/guardarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/white"
                android:text="@string/guardar"
                />

            <GridLayout
                android:id="@+id/bargraphs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="35dp"
                android:columnCount="2"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:textAlignment="center"
                    android:text="@string/muyFeliz"
                    />

                <View
                    android:id="@+id/graphVeryHappy"
                    android:layout_width="250dp"
                    android:layout_height="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:textAlignment="center"
                    android:text="@string/feliz"
                    />

                <View
                    android:id="@+id/graphHappy"
                    android:layout_width="250dp"
                    android:layout_height="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:textAlignment="center"
                    android:text="@string/neutral"
                    />

                <View
                    android:id="@+id/graphNeutral"
                    android:layout_width="250dp"
                    android:layout_height="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:textAlignment="center"
                    android:text="@string/triste"
                    />

                <View
                    android:id="@+id/graphSad"
                    android:layout_width="250dp"
                    android:layout_height="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:textAlignment="center"
                    android:text="@string/muyTriste"
                    />

                <View
                    android:id="@+id/graphVerySad"
                    android:layout_width="250dp"
                    android:layout_height="20dp"
                    />
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>